# deseweb-livraria

./: db.sqlite3  package-lock.json  pyproject.toml
config/: settings.py  urls.py
livraria/: admin.py  models.py  serializers.py  views.py
livraria/migrations/: 0001_initial.py  0002_editora.py  0002_livro_capa.py  0003_autor_livro.py  0003_compra.py  0004_itenscompra.py  0004_livro_autores.py
livraria/models/: __init__.py  autor.py  compra.py  editora.py  livro.py
livraria/serializers/: __init__.py  compra.py  editora.py  livro.py
livraria/views/: __init__.py  autor.py  compra.py  editora.py  livro.py
usuario/migrations/: 0001_initial.py
